--- a/pokeAngular/src/styles.css
+++ b/pokeAngular/src/styles.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    height: 100vh;
+}
+.main{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
