--- a/pokeAngular/src/app/components/home/home.component.html
+++ b/pokeAngular/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
 <div class="home-container">
-    <a class="btn" routerLink="/pokemons">Pokemons</a>
+  <a class="btn" routerLink="/pokemons">
+    <span> Pokemons </span>
+  </a>
 </div>
