--- a/pokeAngular/src/app/components/list/list.component.html
+++ b/pokeAngular/src/app/components/list/list.component.html
@@ -1,4 +1,18 @@
 <div class="list-container">
-    <app-header></app-header>
-    <app-footer></app-footer>
+  <app-header></app-header>
+  <app-footer></app-footer>
+  <div class="search-container">
+    <form action="">
+      <!-- <fa-icon [icon]="faSearch"></fa-icon> -->
+      <input
+        type="text"
+        placeholder="Pesquisar momento"
+        (input)="search($event)"
+      />
+    </form>
+  </div>
+  <div class="moment" *ngFor="let item of listPokemons.results">
+    <h3>{{ item.name }}</h3>
+    <p><a routerLink="pokemons/detalhes:id/{{ item.url }}">Detalhes</a></p>
+  </div>
 </div>
